# nexver

./: Cargo.toml  LICENSE  README.md  action.yaml
.github/workflows/: ci.yaml
scripts/: build-release-artifact  cross-export-image  cross-import-image  cross-install  ghr-install  nexver-install  run-detection
src/: main.rs
