[package]
name = "nexver"
version = "0.2.0"
edition = "2021"

repository = "https://github.com/ancosma/nexver/"
license = "MIT"
keywords = ["version", "conventional", "commits"]
categories = ["command-line-interface", "config", "development-tools"]


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
git2 = { version = "0.15.0", features = ["vendored-libgit2", "vendored-openssl"]}
log = "0.4.17"
regex = "1.7.0"
semver = "1.0.14"
