[package]
name = "nexver"
version = "1.1.2"
edition = "2021"

repository = "https://github.com/ancosma/nexver/"
license = "MIT"
keywords = ["version", "conventional", "commits"]
categories = ["command-line-interface", "config", "development-tools"]


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
git-conventional = "0.12.4"
git2 = { version = "0.18.1", features = ["vendored-libgit2", "vendored-openssl"]}
log = "0.4.20"
regex = "1.9.6"
semver = "1.0.19"
